# coin-light-show-monorepo

./: .gitignore  Makefile  README.md
common/protos/: coin_system.proto  vessel_instructions.proto  witch_intuitions.proto
config/: echo-debug-server.py  misc.md  rpi-1-network-iface-eth0  rpi-2-network-iface-eth0  rpi-3-network-iface-eth0
manager/: README.md  pyproject.toml
manager/misc/: coin-debug.py  smart-film-power-debug.py
manager/scripts/: convert-grpc-imports.sh
manager/src/manager/: __init__.py  task_manager.py  task_queue.py  vessel_instruction_handler.py  witch_intuition_handler.py
manager/src/manager/coin_mechanism/: operator.py
manager/src/manager/rpc/: coin_system_pb2.py  vessel_instructions_pb2.py  witch_intuitions_pb2.py  witch_intuitions_pb2_grpc.py
manager/src/manager/smart_film/: operator.py
structure/: README.md
vessel/: README.md  pyproject.toml
vessel/misc/: led-debug-2.py  led-debug.py  led-setup.sh
vessel/scripts/: convert-grpc-imports.sh
vessel/src/vessel/: __init__.py  servicer.py
vessel/src/vessel/audio/: __init__.py  operator.py
vessel/src/vessel/lights/: __init__.py  operator.py
vessel/src/vessel/rpc/: vessel_instructions_pb2_grpc.py
witch/: LICENSE  README.md  pyproject.toml  setup.cfg
witch/edge-tpu/: gasket-dkms_1.0-18_all.deb  libedgetpu1-max_16.0tf2.16.1-1.bookworm_arm64.deb  libedgetpu1-std_16.0tf2.16.1-1.bookworm_arm64.deb  pycoral-2.0.1-cp311-cp311-linux_aarch64.whl  tflite_runtime-2.16.1-cp311-cp311-linux_aarch64.whl
witch/misc/: camera-debug.py  pose-estimation-debug.py  test-edge-tpu.sh  tpu-debug.py
witch/models/: yolov8n_full_integer_quant_edgetpu.tflite
witch/scripts/: convert-grpc-imports.sh  setup-edge-tpu.sh
witch/src/witch/: __init__.py  servicer.py
witch/src/witch/brain/: __init__.py  operator.py
witch/src/witch/camera/: __init__.py  operator.py
